# timeseries-py

./: data.py  humid_1.keras  light_intensity.keras  predict.py  pyproject.toml  train.py
