[project]
name = "timeseries-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.6.1",
    "kafka>=1.3.5",
    "matplotlib>=3.9.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "tensorflow[and-cuda]>=2.18.0",
]
